--- a/films/kiki1.html
+++ b/films/kiki1.html
@@ -1,74 +1,57 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test Pub</title>
-  <style>
-    body {
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #000;
-    }
-    .video-container {
-      position: relative;
-      width: 80%;
-      max-width: 800px;
-      aspect-ratio: 16/9;
-      background-color: #111;
-    }
-    #video-play-overlay {
-      position: absolute;
-      top:0;
-      left:0;
-      width:100%;
-      height:100%;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      background-color: rgba(0,0,0,0.6);
-      cursor:pointer;
-      z-index: 2;
-    }
-    #video-play-overlay .play-icon {
-      font-size: 5em;
-      color: #e50914;
-    }
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-  </style>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Test Pub VAST</title>
+
+<link href="https://vjs.zencdn.net/7.21.0/video-js.css" rel="stylesheet" />
+<script src="https://vjs.zencdn.net/7.21.0/video.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/videojs-contrib-ads@6.9.0/dist/videojs-contrib-ads.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/videojs-ima@1.8.0/dist/videojs.ima.min.js"></script>
+
+<style>
+  body { background: #000; display: flex; justify-content: center; align-items: center; height: 100vh; }
+  #video-container { position: relative; width: 640px; height: 360px; }
+  #play-overlay {
+    position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+    display: flex; justify-content: center; align-items: center;
+    background: rgba(0,0,0,0.6); cursor: pointer; z-index: 5;
+  }
+  #play-overlay i { font-size: 5em; color: #e50914; }
+</style>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 
-<div class="video-container" id="video-container">
-  <div id="video-play-overlay">
-    <i class="fas fa-play play-icon"></i>
-  </div>
+<div id="video-container">
+  <video
+    id="ad-video"
+    class="video-js vjs-default-skin"
+    width="640"
+    height="360"
+    controls
+  ></video>
+
+  <div id="play-overlay"><i class="fas fa-play"></i></div>
 </div>
 
 <script>
-document.addEventListener('DOMContentLoaded', () => {
-    const playOverlay = document.getElementById('video-play-overlay');
-    const container = document.getElementById('video-container');
+  const overlay = document.getElementById('play-overlay');
+  const player = videojs('ad-video');
 
-    playOverlay.addEventListener('click', () => {
-        playOverlay.style.display = 'none';
+  overlay.addEventListener('click', () => {
+    overlay.style.display = 'none';
 
-        const adIframe = document.createElement('iframe');
-        adIframe.src = "https://s.magsrv.com/v1/vast.php?idzone=5756872"; // lien de la pub
-        adIframe.allow = "autoplay; fullscreen";
-        adIframe.allowFullscreen = true;
-
-        container.appendChild(adIframe);
+    player.ima({
+      adTagUrl: 'https://s.magsrv.com/v1/vast.php?idzone=5756872'
     });
-});
+
+    player.ready(function() {
+      player.play();
+    });
+  });
 </script>
 
 </body>
