--- a/films/kiki1.html
+++ b/films/kiki1.html
@@ -5,51 +5,51 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Test Pub VAST</title>
 
-<link href="https://vjs.zencdn.net/7.21.0/video-js.css" rel="stylesheet" />
-<script src="https://vjs.zencdn.net/7.21.0/video.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/videojs-contrib-ads@6.9.0/dist/videojs-contrib-ads.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/videojs-ima@1.8.0/dist/videojs.ima.min.js"></script>
+<!-- Video.js CSS -->
+<link href="https://vjs.zencdn.net/8.21.0/video-js.css" rel="stylesheet" />
 
 <style>
-  body { background: #000; display: flex; justify-content: center; align-items: center; height: 100vh; }
-  #video-container { position: relative; width: 640px; height: 360px; }
-  #play-overlay {
-    position: absolute; top: 0; left: 0; width: 100%; height: 100%;
-    display: flex; justify-content: center; align-items: center;
-    background: rgba(0,0,0,0.6); cursor: pointer; z-index: 5;
-  }
-  #play-overlay i { font-size: 5em; color: #e50914; }
+  body { background: #000; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
+  .video-container { width: 80%; max-width: 800px; }
 </style>
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 
-<div id="video-container">
+<div class="video-container">
   <video
-    id="ad-video"
+    id="my-video"
     class="video-js vjs-default-skin"
-    width="640"
-    height="360"
     controls
+    preload="auto"
+    width="100%"
+    height="450"
+    poster=""
+    data-setup='{}'
   ></video>
-
-  <div id="play-overlay"><i class="fas fa-play"></i></div>
 </div>
 
+<!-- Video.js JS -->
+<script src="https://vjs.zencdn.net/8.21.0/video.min.js"></script>
+<!-- IMA SDK pour VAST -->
+<script src="https://imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
+<!-- Video.js IMA plugin -->
+<script src="https://cdn.jsdelivr.net/npm/videojs-contrib-ads@6.10.2/dist/videojs.ads.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/videojs-ima@1.10.2/dist/videojs.ima.min.js"></script>
+
 <script>
-  const overlay = document.getElementById('play-overlay');
-  const player = videojs('ad-video');
+  const player = videojs('my-video');
 
-  overlay.addEventListener('click', () => {
-    overlay.style.display = 'none';
+  // Initialise IMA plugin avec ton VAST tag
+  player.ima({
+    adTagUrl: 'https://s.magsrv.com/v1/vast.php?idzone=5756872'
+  });
 
-    player.ima({
-      adTagUrl: 'https://s.magsrv.com/v1/vast.php?idzone=5756872'
-    });
-
-    player.ready(function() {
-      player.play();
+  // Démarre la pub au premier click sur le player
+  player.ready(function() {
+    player.on('play', function() {
+      if (!player.ima.getAdsManager()) {
+        player.ima.requestAds();
+      }
     });
   });
 </script>
