--- a/films/kiki1.html
+++ b/films/kiki1.html
@@ -3,11 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Test Pub VAST</title>
-
-<!-- Video.js CSS -->
+<title>Test Pub VAST Fonctionnel</title>
 <link href="https://vjs.zencdn.net/8.21.0/video-js.css" rel="stylesheet" />
-
 <style>
   body { background: #000; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
   .video-container { width: 80%; max-width: 800px; }
@@ -24,27 +21,22 @@
     width="100%"
     height="450"
     poster=""
-    data-setup='{}'
-  ></video>
+    data-setup='{}'>
+  </video>
 </div>
 
-<!-- Video.js JS -->
 <script src="https://vjs.zencdn.net/8.21.0/video.min.js"></script>
-<!-- IMA SDK pour VAST -->
 <script src="https://imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
-<!-- Video.js IMA plugin -->
 <script src="https://cdn.jsdelivr.net/npm/videojs-contrib-ads@6.10.2/dist/videojs.ads.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/videojs-ima@1.10.2/dist/videojs.ima.min.js"></script>
 
 <script>
   const player = videojs('my-video');
 
-  // Initialise IMA plugin avec ton VAST tag
   player.ima({
-    adTagUrl: 'https://s.magsrv.com/v1/vast.php?idzone=5756872'
+    adTagUrl: 'https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/ad_rule_samples&ciu_szs=300x250,728x90&ad_rule=1&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dlinear&correlator=' + Date.now()
   });
 
-  // Démarre la pub au premier click sur le player
   player.ready(function() {
     player.on('play', function() {
       if (!player.ima.getAdsManager()) {
@@ -53,6 +45,5 @@
     });
   });
 </script>
-
 </body>
 </html>
