--- a/films/kiki1.html
+++ b/films/kiki1.html
@@ -2,24 +2,46 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Test brut du flux VAST</title>
+  <title>Test VAST Ad ExoClick</title>
+  <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet">
+  <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/videojs-contrib-ads@6.9.0/dist/videojs-contrib-ads.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/videojs-ima@1.9.0/dist/videojs.ima.min.js"></script>
+
   <style>
-    body { font-family: monospace; background: #111; color: #0f0; padding: 20px; white-space: pre-wrap; }
+    body {
+      background: #111;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      flex-direction: column;
+      color: #eee;
+      font-family: sans-serif;
+    }
+    .video-js {
+      width: 640px;
+      height: 360px;
+    }
   </style>
 </head>
 <body>
-  <h2>Résultat brut du flux VAST :</h2>
-  <div id="result">Chargement...</div>
+  <h2>🎬 Test Lecture VAST ExoClick</h2>
+  <video id="my-video" class="video-js vjs-default-skin" controls preload="auto">
+    <source src="" type="video/mp4">
+  </video>
 
   <script>
-    fetch("https://s.magsrv.com/v1/vast.php?idzone=5756872")
-      .then(response => response.text())
-      .then(text => {
-        document.getElementById("result").textContent = text;
-      })
-      .catch(err => {
-        document.getElementById("result").textContent = "Erreur de chargement : " + err;
-      });
+    const player = videojs('my-video');
+
+    player.ima({
+      adTagUrl: 'https://s.magsrv.com/v1/vast.php?idzone=5756872'
+    });
+
+    player.ready(() => {
+      player.ima.requestAds();
+      player.play();
+    });
   </script>
 </body>
 </html>
