Ajout fichier ads.txt sans conversion CRLF

--- a/films.html
+++ b/films.html
@@ -33,6 +33,8 @@
   gtag('config', 'G-4NKY9G2SBN');
 </script>
 
+<script type='text/javascript' src='//imbueprescriptionhumiliation.com/a0/de/52/a0de529083a01b3b72e7e46c528c84ef.js'></script>
+
 </head>
 <body>
 
