--- a/index.html
+++ b/index.html
@@ -368,5 +368,7 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 
+<script type='text/javascript' src='//imbueprescriptionhumiliation.com/a0/de/52/a0de529083a01b3b72e7e46c528c84ef.js'></script>
+
 </body>
 </html>
