Ajout fichier ads.txt sans conversion CRLF

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 </div>
 </main>
 
-<footer class="footer" id="contact">
+<<footer class="footer" id="contact">
   <div class="footer-content">
     <p>&copy; 2025 Amazigh TV. Tous droits réservés.</p>
     <p>Une initiative de la communauté Kabyle. <a href="mailto:contact@amazightv.com">Contactez-nous</a></p>
@@ -294,9 +294,46 @@
              alt="Nombre de visiteurs" class="visitor-badge" />
         <span class="visitor-text">Visites totales</span>
     </div>
-  
+
+    <!-- === Bouton Buy Me a Coffee === -->
+    <div style="text-align:center; margin-top:20px;">
+      <a href="https://www.buymeacoffee.com/ghilasebba4" target="_blank" 
+         style="background-color:#ffdd00; color:#000; font-weight:bold; 
+                padding:14px 26px; border-radius:10px; text-decoration:none; 
+                font-family:'Inter', sans-serif; box-shadow:0 4px 10px rgba(0,0,0,0.2);">
+        ☕ Soutenir Amazigh TV avec un petit don, Tanemirt.
+      </a>
+    </div>
+
   </div>
 </footer>
+
+<!-- === Bouton flottant Buy Me a Coffee === -->
+<style>
+.tip-button {
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  background-color: #ffcc00;
+  color: #000;
+  font-weight: bold;
+  padding: 14px 20px;
+  border-radius: 50px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+  font-family: 'Inter', sans-serif;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  z-index: 9999;
+}
+.tip-button:hover {
+  background-color: #ffe24a;
+  transform: translateY(-2px);
+}
+</style>
+
+<a href="https://www.buymeacoffee.com/ghilasebba4" target="_blank" class="tip-button">
+  ❤️ Soutenir Amazigh TV avec un petit don, Tanemirt.
+</a>
 
 <div id="modal-access-denied" class="modal">
   <div class="modal-content modal-access-denied-content">
