--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
          style="background-color:#ffdd00; color:#000; font-weight:bold; 
                 padding:14px 26px; border-radius:10px; text-decoration:none; 
                 font-family:'Inter', sans-serif; box-shadow:0 4px 10px rgba(0,0,0,0.2);">
-        ☕ Soutenir Amazigh TV avec un petit don, Tanemirt.
+        ☕ Un don pour nous soutenir, Tanmirt
       </a>
     </div>
 
