Ajout fichier ads.txt sans conversion CRLF

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 </style>
 
 <a href="https://www.buymeacoffee.com/ghilasebba4" target="_blank" class="tip-button">
-  ❤️ Soutenir Amazigh TV avec un petit don, Tanemirt.
+  ❤️ Un don pour nous soutenir, Tanmirt
 </a>
 
 <div id="modal-access-denied" class="modal">
