--- a/films/crek1.html
+++ b/films/crek1.html
@@ -398,27 +398,28 @@
     </div>
 </footer>
 
+<script src="https://vjs.zencdn.net/7.22.1/video.min.js"></script>
+<link href="https://vjs.zencdn.net/7.22.1/video-js.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/videojs-contrib-ads@6.9.0/dist/videojs-contrib-ads.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/videojs-ima@1.8.0/dist/videojs.ima.min.js"></script>
+
 <script>
 document.addEventListener('DOMContentLoaded', () => {
 
-    // Liens des lecteurs vidéo
+    // --- Ton code existant ---
     const videoLinks = {
         'dood': 'https://dsvplay.com/e/2mi71p1yjehy', 
         'streamtape': 'https://streamtape.com/e/P9avZje4apT0apz'
     };
 
-    // Sélecteurs
     const playOverlay = document.getElementById('video-play-overlay');
     const videoLoading = document.getElementById('video-loading-player');
     let videoIframe = document.getElementById('video-iframe-player');
     const playerButtons = document.querySelectorAll('.player-button');
     const playButton = document.querySelector('.hero-play-button');
 
-    
-
     let activePlayer = 'dood';
 
-    // Fonction pour mettre à jour l'iframe
     function updateIframeSource() {
         const link = videoLinks[activePlayer];
         if (!link) {
@@ -461,7 +462,6 @@ document.addEventListener('DOMContentLoaded', () => {
         };
     }
 
-    // Changement de lecteur
     playerButtons.forEach(button => {
         button.addEventListener('click', function() {
             playerButtons.forEach(btn => btn.classList.remove('active'));
@@ -471,15 +471,42 @@ document.addEventListener('DOMContentLoaded', () => {
         });
     });
 
-    // Fonction déclencheur du bouton
+    // --- Nouveau : preroll VAST avant l'iframe ---
     function launchVideo() {
-        updateIframeSource();
-      
+        // Crée un petit player temporaire pour la pub
+        const container = videoIframe.parentNode;
+        container.innerHTML = `
+            <video
+                id="vast-player"
+                class="video-js vjs-default-skin"
+                controls
+                preload="auto"
+                width="100%"
+                height="100%"
+            ></video>
+        `;
 
-        const videoSection = document.querySelector('.video-section');
-        if (videoSection) {
-            videoSection.scrollIntoView({ behavior: 'smooth', block: 'center' });
-        }
+        const player = videojs('vast-player');
+        player.ima({
+            adTagUrl: 'https://s.magsrv.com/v1/vast.php?idzone=5757158',
+            debug: false
+        });
+
+        player.on('adsready', () => player.play());
+
+        player.on('adend', () => {
+            // Dès que la pub finit, on lance ton iframe existant
+            container.innerHTML = `<iframe
+                id="video-iframe-player"
+                src="${videoLinks[activePlayer]}"
+                width="100%"
+                height="100%"
+                allow="autoplay; fullscreen; encrypted-media"
+                allowfullscreen
+            ></iframe>`;
+        });
+
+        if (playOverlay) playOverlay.style.display = 'none';
     }
 
     if (playButton) playButton.addEventListener('click', launchVideo);
