--- a/films.html
+++ b/films.html
@@ -94,6 +94,19 @@
 
     <div class="film-grid">
 
+         
+        <a href="films/limucucu2.html" class="film-card">
+          <article>
+            <div class="film-poster">
+              <img src="images/li mucucu 2.jpg" alt="li mucucu - Film comedie Kabyle" loading="lazy">
+              <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
+            </div>
+            <div class="film-info">
+              <h4>Li mucucu 2</h4>
+              <p>Comédie, 74 min</p>
+            </div>
+          </article>
+        </a>
       
         <a href="films/narnia2.html" class="film-card">
           <article>
