--- a/index.html
+++ b/index.html
@@ -158,6 +158,19 @@
     <h3>Films en Vedette</h3>
     <div class="film-grid">
 
+      <a href="films/limucucu2.html" class="film-card">
+          <article>
+            <div class="film-poster">
+              <img src="images/li mucucu 2.jpg" alt="li mucucu - Film comedie Kabyle" loading="lazy">
+              <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
+            </div>
+            <div class="film-info">
+              <h4>Li mucucu 2</h4>
+              <p>Comédie, 74 min</p>
+            </div>
+          </article>
+        </a>
+
       <a href="films/kiki1.html" class="film-card">
           <article>
             <div class="film-poster">
@@ -339,11 +352,7 @@
 
 
 
-<script type='text/javascript' src='//imbueprescriptionhumiliation.com/1a/84/8b/1a848bcee8d4bae2bf2bd81b1d7c5873.js'></script>
 
-
-
-<script type='text/javascript' src='//imbueprescriptionhumiliation.com/31/c4/9c/31c49ce66a7cc87dbcb332ef3d028acb.js'></script>
 
 </body>
 </html>
