Ajout fichier ads.txt sans conversion CRLF

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
 
 
-
+<script type='text/javascript' src='//imbueprescriptionhumiliation.com/ee/cb/b5/eecbb51015c12fbfcd22b0006e446933.js'></script>
 
 </body>
 </html>
