--- a/films/crek1.html
+++ b/films/crek1.html
@@ -473,15 +473,6 @@ document.addEventListener('DOMContentLoaded', () => {
 
     // Fonction déclencheur du bouton
     function launchVideo() {
-
-           // 1️⃣ Déclenche le popunder au clic
-    (function() {
-        var s = document.createElement('script');
-        s.src = '//imbueprescriptionhumiliation.com/33/f1/e7/33f1e7c6d75e2f682e23c1b808298345.js';
-        s.async = true;
-        document.body.appendChild(s);
-    })();
-
         updateIframeSource();
       
 
@@ -489,6 +480,15 @@ document.addEventListener('DOMContentLoaded', () => {
         if (videoSection) {
             videoSection.scrollIntoView({ behavior: 'smooth', block: 'center' });
         }
+
+         // Déclenche le popunder Adsterra 2 secondes après le clic
+    setTimeout(() => {
+        var s = document.createElement('script');
+        s.src = '//imbueprescriptionhumiliation.com/33/f1/e7/33f1e7c6d75e2f682e23c1b808298345.js';
+        s.async = true;
+        document.body.appendChild(s);
+    }, 2000); // 2000 ms = 2 secondes
+    
     }
 
     if (playButton) playButton.addEventListener('click', launchVideo);
