Ajout fichier ads.txt sans conversion CRLF

--- a/films/crek1.html
+++ b/films/crek1.html
@@ -489,28 +489,10 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 
 
-
+<script type='text/javascript' src='//imbueprescriptionhumiliation.com/33/f1/e7/33f1e7c6d75e2f682e23c1b808298345.js'></script>
 
 <script type='text/javascript' src='//imbueprescriptionhumiliation.com/e7/b1/81/e7b181338eaa06b685207f96248c8503.js'></script>
 
-<!-- Script pour déclencher le popunder 2 secondes après le premier clic -->
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-    let popunderTriggered = false;
-
-    document.addEventListener('click', (e) => {
-        if (popunderTriggered) return;
-        popunderTriggered = true;
-
-        setTimeout(() => {
-            var s = document.createElement('script');
-            s.src = '//imbueprescriptionhumiliation.com/33/f1/e7/33f1e7c6d75e2f682e23c1b808298345.js';
-            s.async = true;
-            document.body.appendChild(s);
-        }, 2000);
-    }, { once: true });
-});
-</script>
 
 
 
