Ajout fichier ads.txt sans conversion CRLF

--- a/films/qezbul1.html
+++ b/films/qezbul1.html
@@ -9,13 +9,13 @@
   <meta property="og:title" content="Qezbul 1 - Film Kabyle Complet Gratuit | Amazigh TV">
   <meta property="og:description" content="Film comédie kabyle Qezbul 1 en streaming HD. Durée: 83 min. Genre: Comédie.">
   <meta property="og:image" content="../images/qezbul 1.jpg">
-  <meta property="og:url" content="https://amazigh-tv.vercel.app/films/qezbul1.html">
+  <meta property="og:url" content="https://amazigh-tv.site/films/qezbul1.html">
   <meta property="og:type" content="video.movie">
 
   <meta name="keywords" content="film kabyle, cinema amazigh, streaming gratuit, pucci, qezbul, li mucucu">
   <meta name="author" content="Amazigh TV">
 
-  <link rel="canonical" href="https://amazigh-tv.vercel.app/films/qezbul1.html">
+  <link rel="canonical" href="https://amazigh-tv.site/films/qezbul1.html">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1yOQ/Lp02H1lq1+8YcR/Wk80zL0c/s11D4n5bJkU5l0O7tY5U/PzG0h1O1h5zO7Wk5vA7r5/j4g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="icon" type="image/png" sizes="32x32" href="../images/logo-32.png">
