--- a/films.html
+++ b/films.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="/images/og-image.jpg">
 
-  <link rel="canonical" href="https://amazigh-tv.vercel.app/films/films.html" />
+  <link rel="canonical" href="https://amazigh-tv.site/films/films.html" />
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="/images/logo-32.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/images/logo-180.png">
