--- a/films/kiki1.html
+++ b/films/kiki1.html
@@ -9,21 +9,21 @@
   <meta property="og:title" content="Kiki 1 - Film Kabyle Fantastique Gratuit | Amazigh TV">
   <meta property="og:description" content="Film fantastique et comique kabyle Kiki 1 en streaming HD. Durée: 75 min. Genre: Fantastique.">
   <meta property="og:image" content="../images/kiki1.jpg">
-  <meta property="og:url" content="https://amazigh-tv.vercel.app/films/kiki1.html">
+  <meta property="og:url" content="https://amazigh-tv.site/films/kiki1.html">
   <meta property="og:type" content="video.movie">
 
   <meta name="keywords" content="film kabyle, cinema amazigh, streaming gratuit, kiki 1, narnia 2, crek1, pucci, qezbul, li mucucu">
   <meta name="author" content="Amazigh TV">
 
 
-  <link rel="canonical" href="https://amazigh-tv.vercel.app/films/kiki1.html">
+
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1yOQ/Lp02H1lq1+8YcR/Wk80zL0c/s11D4n5bJkU5l0O7tY5U/PzG0h1O1h5zO7Wk5vA7r5/j4g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="icon" type="image/png" sizes="32x32" href="../images/logo-32.png">
   <link rel="apple-touch-icon" sizes="180x180" href="../images/logo-180.png">
 
   
-  <link rel="canonical" href="https://amazigh-tv.vercel.app/films/kiki1.html" />
+  <link rel="canonical" href="https://amazigh-tv.site/films/kiki1.html" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
