--- a/films/narnia1.html
+++ b/films/narnia1.html
@@ -9,14 +9,14 @@
   <meta property="og:title" content="Narnia 1 - Film Kabyle Fantastique Gratuit | Amazigh TV">
   <meta property="og:description" content="Film fantastique kabyle Narnia 1 en streaming HD. Durée: 127 min. Genre: Fantastique.">
   <meta property="og:image" content="../images/narnia 1.jpg">
-  <meta property="og:url" content="https://amazigh-tv.vercel.app/films/narnia1.html">
+  <meta property="og:url" content="https://amazigh-tv.site/films/narnia1.html">
   <meta property="og:type" content="video.movie">
 
   <meta name="keywords" content="film kabyle, cinema amazigh, streaming gratuit, narnia 1, pucci, qezbul, li mucucu">
   <meta name="author" content="Amazigh TV">
 
 
-  <link rel="canonical" href="https://amazigh-tv.vercel.app/films/narnia1.html">
+  <link rel="canonical" href="https://amazigh-tv.site/films/narnia1.html">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1yOQ/Lp02H1lq1+8YcR/Wk80zL0c/s11D4n5bJkU5l0O7tY5U/PzG0h1O1h5zO7Wk5vA7r5/j4g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="icon" type="image/png" sizes="32x32" href="../images/logo-32.png">
