--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="/images/og-image.jpg">
   <!-- Open Graph pour le logo -->
-<meta property="og:image" content="https://amazigh-tv.vercel.app/images/logo-512.png">
+<meta property="og:image" content="https://amazigh-tv.site/images/logo-512.png">
 <meta property="og:image:width" content="512">
 <meta property="og:image:height" content="512">
 <meta property="og:image:alt" content="Amazigh TV - Logo">
@@ -35,7 +35,7 @@
 }
 </script>
   
-  <link rel="canonical" href="https://amazigh-tv.vercel.app/films/index.html" />
+  <link rel="canonical" href="https://amazigh-tv.site/films/index.html" />
   <link rel="stylesheet" href="style.css">
   <!-- Favicon navigateur -->
   <link rel="icon" type="image/png" sizes="32x32" href="/images/logo-32.png">
