Ajout fichier ads.txt sans conversion CRLF

--- a/films/kiki1.html
+++ b/films/kiki1.html
@@ -370,7 +370,7 @@
     "@type": "Movie",
     "name": "Crek 1",
     "description": "Film fantastique Comédie kabyle Crek 1 - Film animation en kabyle",
-    "image": "https://amazigh-tv.vercel.app/images/kiki.jpg",
+    "image": "https://amazigh-tv.site/images/kiki.jpg",
     "duration": "PT127M",
     "genre": "Fantasy, Comédie",
     "datePublished": "2001",
