--- a/films/limucucu1.html
+++ b/films/limucucu1.html
@@ -367,7 +367,7 @@
     "@type": "Movie",
     "name": "Li Mucucu 1",
     "description": "Film comédie kabyle Li Mucucu 1 - Aventures hilarantes de Li Mucucu et ses amis",
-    "image": "https://amazigh-tv.vercel.app/images/li mucucu 1.jpg",
+    "image": "https://amazigh-tv.site/images/li mucucu 1.jpg",
     "duration": "PT74M",
     "genre": "Comedy",
     "datePublished": "2023",
