--- a/films/narnia1.html
+++ b/films/narnia1.html
@@ -367,7 +367,7 @@
     "@type": "Movie",
     "name": "Narnia 1",
     "description": "Film fantastique kabyle Narnia 1 - Adaptation en kabyle du monde magique de Narnia",
-    "image": "https://amazigh-tv.vercel.app/images/narnia 1.jpg",
+    "image": "https://amazigh-tv.site/images/narnia 1.jpg",
     "duration": "PT127M",
     "genre": "Fantasy",
     "datePublished": "2023",
