--- a/films/narnia2.html
+++ b/films/narnia2.html
@@ -369,7 +369,7 @@
     "@type": "Movie",
     "name": "Crek 1",
     "description": "Film fantastique Comédie kabyle Crek 1 - Film animation en kabyle",
-    "image": "https://amazigh-tv.vercel.app/images/narnia2.jpg",
+    "image": "https://amazigh-tv.site/images/narnia2.jpg",
     "duration": "PT127M",
     "genre": "Fantasy, Comédie",
     "datePublished": "2001",
