--- a/films/pucci2.html
+++ b/films/pucci2.html
@@ -27,7 +27,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-  <script type="text/javascript" src="//ads.vidoomy.com/amazigh-tvvercelapp_26776.js" ></script>
+  
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-2L50HTQ2Z6"></script>
   <script>
@@ -368,7 +368,7 @@
     "@type": "Movie",
     "name": "Pucci 1",
     "description": "Film comédie kabyle Pucci 1 - Premier volet de la série culte Pucci",
-    "image": "https://amazigh-tv.vercel.app/images/pucci1.jpg",
+    "image": "https://amazigh-tv.site/images/pucci1.jpg",
     "duration": "PT80M",
     "genre": "Comedy",
     "datePublished": "2023",
