--- a/films/pucci4.html
+++ b/films/pucci4.html
@@ -367,7 +367,7 @@
     "@type": "Movie",
     "name": "Pucci 4",
     "description": "Film comédie kabyle Pucci 4 - Quatrième volet des aventures de Pucci",
-    "image": "https://amazigh-tv.vercel.app/images/pucci4.jpg",
+    "image": "https://amazigh-tv.site/images/pucci4.jpg",
     "duration": "PT115M",
     "genre": "Comedy",
     "datePublished": "2023",
