--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   "@context": "https://schema.org",
   "@type": "Organization", 
   "name": "Amazigh TV",
-  "url": "https://amazigh-tv.vercel.app",
-  "logo": "https://amazigh-tv.vercel.app/images/logo-512.png",
+  "url": "https://amazigh-tv.site.app",
+  "logo": "https://amazigh-tv.site/images/logo-512.png",
   "description": "Films et courts métrages Kabyles en streaming gratuit",
   "sameAs": []
 }
