--- a/films/crek1.html
+++ b/films/crek1.html
@@ -377,7 +377,7 @@
     "@type": "Movie",
     "name": "Crek 1",
     "description": "Film fantastique Comédie kabyle Crek 1 - Film animation en kabyle",
-    "image": "https://amazigh-tv.vercel.app/images/crek1.jpg",
+    "image": "https://amazigh-tv.site/images/crek1.jpg",
     "duration": "PT127M",
     "genre": "Fantasy, Comédie",
     "datePublished": "2001",
