--- a/films/qezbul1.html
+++ b/films/qezbul1.html
@@ -28,7 +28,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   
-  <script type="text/javascript" src="//ads.vidoomy.com/amazigh-tvvercelapp_26776.js" ></script>
+  
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-2L50HTQ2Z6"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -367,7 +367,7 @@
     "@type": "Movie",
     "name": "Qezbul 1",
     "description": "Film comédie kabyle Qezbul 1 - Aventures déjantées de Qezbul et son équipe",
-    "image": "https://amazigh-tv.vercel.app/images/qezbul 1.jpg",
+    "image": "https://amazigh-tv.site/images/qezbul 1.jpg",
     "duration": "PT83M",
     "genre": "Comedy",
     "datePublished": "2023",
