Ajout fichier ads.txt sans conversion CRLF

--- a/films/pucci1.html
+++ b/films/pucci1.html
@@ -397,7 +397,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
     // Liens des lecteurs vidéo
     const videoLinks = {
-        'dood': 'https://dsvplay.com/e/efqqry59eit5', 
+        'dood': 'https://hglink.to/e/j9tsobh2m54t', 
         'streamtape': 'https://streamtape.com/e/JYm93KBoPYIjM7J'
     };
 
