Ajout fichier ads.txt sans conversion CRLF

--- a/films/pucci1.html
+++ b/films/pucci1.html
@@ -295,8 +295,12 @@
     <div class="video-responsive-container">
         <iframe 
             src="https://hglink.to/e/j9tsobh2m54t" 
-            allow="autoplay; fullscreen" 
-            allowfullscreen 
+            allow="autoplay; fullscreen; encrypted-media; picture-in-picture"
+            allowfullscreen="true"
+            webkitallowfullscreen="true"
+            mozallowfullscreen="true"
+            frameborder="0"
+            scrolling="no"
             title="Lecteur vidéo Pucci 1"
             width="100%" 
             height="100%">
